--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ MONGO_URL=
 
 HASH_ROUNDS=
 
+FRONT_URL=
+
 JWT_ACCESS_SECRET=
 JWT_ACCESS_EXPIRES_IN=
 JWT_REFRESH_SECRET=
 JWT_REFRESH_EXPIRES_IN=
+
+NAME_ACCAOUNT_GMAIL=
+PASSWORD_ACCAOUNT_GMAIL=
