add task8 verify

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,10 @@ JWT_ACCESS_EXPIRES_IN=
 JWT_REFRESH_SECRET=
 JWT_REFRESH_EXPIRES_IN=
 
+JWT_ACTION_FORGOT_TOKEN_SECRET=
+JWT_ACTION_FORGOT_EXPIRES_IN=
+JWT_ACTION_VERIFY_SECRET=
+JWT_ACTION_VERIFY_IN=
+
 NAME_ACCAOUNT_GMAIL=
 PASSWORD_ACCAOUNT_GMAIL=
