--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ JWT_ACTION_VERIFY_IN=
 
 NAME_ACCAOUNT_GMAIL=
 PASSWORD_ACCAOUNT_GMAIL=
+
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+AWS_S3_BUCKET_NAME=
+AWS_S3_REGION=
+AWS_S3_ENDPOINT=
