--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ JWT_ACTION_FORGOT_EXPIRES_IN=
 JWT_ACTION_VERIFY_SECRET=
 JWT_ACTION_VERIFY_IN=
 
-NAME_ACCAOUNT_GMAIL=
-PASSWORD_ACCAOUNT_GMAIL=
+NAME_ACCOUNT_GMAIL=
+PASSWORD_ACCOUNT_GMAIL=
